--- a/src/pipeline/notebooks/ome_zarr_test.ipynb
+++ b/src/pipeline/notebooks/ome_zarr_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "id": "21f85887",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,15 @@
     "from pathlib import Path\n",
     "import numpy as np\n",
     "import math\n",
-    "import psutil"
+    "import psutil\n",
+    "import operator\n",
+    "from functools import reduce"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "7ea89772",
+   "execution_count": 65,
+   "id": "c9f59caf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,44 +103,136 @@
     "\n",
     "        idx += 1\n",
     "\n",
-    "    \n"
+    "        \n",
+    "def binlist(n, width=0):\n",
+    "    \"\"\"Return list of bits that represent a non-negative integer.\n",
+    "\n",
+    "    n      -- non-negative integer\n",
+    "    width  -- number of bits in returned zero-filled list (default 0)\n",
+    "    \"\"\"\n",
+    "    return map(int, list(bin(n)[2:].zfill(width)))\n",
+    "\n",
+    "def numVals(shape):\n",
+    "    \"\"\"Return number of values in chunk of specified shape, given by a list of dimension lengths.\n",
+    "\n",
+    "    shape -- list of variable dimension sizes\"\"\"\n",
+    "    print('shape', shape)\n",
+    "    #if(len(shape) == 0):\n",
+    "    #    return 1\n",
+    "    return reduce(operator.mul, shape)\n",
+    "\n",
+    "def perturbShape(shape, onbits):\n",
+    "    \"\"\"Return shape perturbed by adding 1 to elements corresponding to 1 bits in onbits\n",
+    "\n",
+    "    shape  -- list of variable dimension sizes\n",
+    "    onbits -- non-negative integer less than 2**len(shape)\n",
+    "    \"\"\"\n",
+    "    return map(sum, zip(shape, binlist(onbits, len(shape))))        \n",
+    "\n",
+    "def chunk_shape_3D(varShape, valSize=4, chunkSize=4096):\n",
+    "    \"\"\"\n",
+    "    Return a 'good shape' for a 3D variable, assuming balanced 1D/(n-1)D access\n",
+    "\n",
+    "    varShape  -- length 3 list of variable dimension sizes\n",
+    "    chunkSize -- maximum chunksize desired, in bytes (default 4096)\n",
+    "    valSize   -- size of each data value, in bytes (default 4)\n",
+    "\n",
+    "    Returns integer chunk lengths of a chunk shape that provides\n",
+    "    balanced access of 1D subsets and 2D subsets of a netCDF or HDF5\n",
+    "    variable var with shape (T, X, Y), where the 1D subsets are of the\n",
+    "    form var[:,x,y] and the 2D slices are of the form var[t,:,:],\n",
+    "    typically 1D time series and 2D spatial slices.  'Good shape' for\n",
+    "    chunks means that the number of chunks accessed to read either\n",
+    "    kind of 1D or 2D subset is approximately equal, and the size of\n",
+    "    each chunk (uncompressed) is no more than chunkSize, which is\n",
+    "    often a disk block size.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    rank = 3\n",
+    "    chunkVals = chunkSize / float(valSize) # ideal number of values in a chunk\n",
+    "    numChunks  = varShape[0]*varShape[1]*varShape[2] / chunkVals # ideal number of chunks\n",
+    "    axisChunks = numChunks ** 0.25 # ideal number of chunks along each 2D axis\n",
+    "    cFloor = [] # will be first estimate of good chunk shape\n",
+    "    # cFloor  = [varShape[0] // axisChunks**2, varShape[1] // axisChunks, varShape[2] // axisChunks]\n",
+    "    # except that each chunk shape dimension must be at least 1\n",
+    "    # chunkDim = max(1.0, varShape[0] // axisChunks**2)\n",
+    "    if varShape[0] / axisChunks**2 < 1.0:\n",
+    "        chunkDim = 1.0\n",
+    "        axisChunks = axisChunks / math.sqrt(varShape[0]/axisChunks**2)\n",
+    "    else:\n",
+    "        chunkDim = varShape[0] // axisChunks**2\n",
+    "    cFloor.append(chunkDim)\n",
+    "    prod = 1.0  # factor to increase other dims if some must be increased to 1.0\n",
+    "    for i in range(1, rank):\n",
+    "        if varShape[i] / axisChunks < 1.0:\n",
+    "            prod *= axisChunks / varShape[i]\n",
+    "    for i in range(1, rank):\n",
+    "        if varShape[i] / axisChunks < 1.0:\n",
+    "            chunkDim = 1.0\n",
+    "        else:\n",
+    "            chunkDim = (prod*varShape[i]) // axisChunks\n",
+    "        cFloor.append(chunkDim)\n",
+    "\n",
+    "    # cFloor is typically too small, (numVals(cFloor) < chunkSize)\n",
+    "    # Adding 1 to each shape dim results in chunks that are too large,\n",
+    "    # (numVals(cCeil) > chunkSize).  Want to just add 1 to some of the\n",
+    "    # axes to get as close as possible to chunkSize without exceeding\n",
+    "    # it.  Here we use brute force, compute numVals(cCand) for all\n",
+    "    # 2**rank candidates and return the one closest to chunkSize\n",
+    "    # without exceeding it.\n",
+    "    bestChunkSize = 0\n",
+    "    cBest = cFloor\n",
+    "    for i in range(8):\n",
+    "        # cCand = map(sum,zip(cFloor, binlist(i, rank)))\n",
+    "        cCand = perturbShape(cFloor, i)\n",
+    "        thisChunkSize = valSize * numVals(cCand)\n",
+    "        if bestChunkSize < thisChunkSize <= chunkSize:\n",
+    "            bestChunkSize = thisChunkSize\n",
+    "            cBest = list(cCand) # make a copy of best candidate so far\n",
+    "    return map(int, cBest)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d1b335f5",
+   "execution_count": 49,
+   "id": "84fd3716",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(138, 854, 568) size in MB=63.8389\n",
-      "(1, 4620, 5430) size in MB=23.9244\n"
+      "(138, 854, 568) size 0.12468534708023071GB\n",
+      "(3, 9240, 10860) size 0.5607292056083679GB\n"
      ]
     }
    ],
    "source": [
     "shape = (138, 854, 568)\n",
-    "print(f'{shape} size in MB={get_size_MB(shape)}')\n",
-    "shape = (1, 36962//8, 43442//8)\n",
-    "print(f'{shape} size in MB={get_size_MB(shape)}')"
+    "print(f'{shape} size {get_size_GB(shape)}GB')\n",
+    "shape = (3, 36962//4, 43442//4)\n",
+    "print(f'{shape} size {get_size_GB(shape)}GB')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "b0d63756",
+   "execution_count": 68,
+   "id": "c4f87f5e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(250, 1536, 1024)\n",
-      "0.732421875\n",
-      "(250, 1536, 1024)\n"
+      "shape <map object at 0x7ebda659fa60>\n",
+      "shape <map object at 0x7ebda659f580>\n",
+      "shape <map object at 0x7ebda659eb30>\n",
+      "shape <map object at 0x7ebda659fa90>\n",
+      "shape <map object at 0x7ebda659fa60>\n",
+      "shape <map object at 0x7ebda659f580>\n",
+      "shape <map object at 0x7ebda659eb30>\n",
+      "shape <map object at 0x7ebda659fa90>\n",
+      "[]\n"
      ]
     }
    ],
@@ -153,8 +247,9 @@
     "image_shape = (4750, 36962, 43442)\n",
     "original_chunks = (1, 1024, 1024)\n",
     "image_chunks=(250, 1536, 1024)\n",
-    "chunks = optimize_chunk_shape_3d(image_shape, image_chunks)\n",
-    "print(chunks)"
+    "#chunks = optimize_chunk_shape_3d(image_shape, image_chunks)\n",
+    "chunks = chunk_shape_3D(image_shape)\n",
+    "print(list(chunks))"
    ]
   }
  ],
