Removed rechunking from omezarr process as it just doesn't work

--- a/in_development/edward/valis_test.ipynb
+++ b/in_development/edward/valis_test.ipynb
@@ -51,15 +51,13 @@
     "registrar = registration.Valis(\n",
     "    slide_src_dir,\n",
     "    results_dst_dir,\n",
-    "    reference_img_f=reference_slide,\n",
     "    img_list=ordered_img_list,\n",
     "    imgs_ordered=True,\n",
     "    image_type=\"fluorescence\",\n",
     "    non_rigid_registrar_cls=None,\n",
-    "    resolution_xyu=(10.4*4, 10.4*4, u'\\u00B5m'),\n",
-    "    max_processed_image_dim_px=1765/4,\n",
-    "    max_image_dim_px=1765/4,\n",
-    "    align_to_reference=True\n",
+    "    resolution_xyu=(10.4, 10.4, u'\\u00B5m'),\n",
+    "    max_processed_image_dim_px=1765,\n",
+    "    max_image_dim_px=1765,\n",
     ")"
    ]
   },
