--- a/in_development/Duane/czi_extract_img.ipynb
+++ b/in_development/Duane/czi_extract_img.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'image_manipulation'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 15>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(PIPELINE_ROOT\u001b[38;5;241m.\u001b[39mas_posix())\n\u001b[1;32m     13\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/data/pipeline/src/\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mimage_manipulation\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpipeline_process\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Pipeline\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'image_manipulation'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy.ndimage import affine_transform\n",
     "import tifffile as tiff\n",
@@ -76,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +84,7 @@
     "from library.utilities.utilities_mask import equalized\n",
     "\n",
     "\n",
-    "class CZIManager(FileLogger):\n",
+    "class CZIManager():\n",
     "    \"\"\"Methods to extract meta-data from czi files using AICSImage module (Allen Institute)\n",
     "    \"\"\"\n",
     "    \n",
@@ -310,11 +298,221 @@
     "\n",
     "extract_tiff_from_czi(file_key)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metadata saved to metadata_output.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xml.etree.ElementTree as ET\n",
+    "from aicspylibczi import CziFile\n",
+    "from aicsimageio import AICSImage\n",
+    "\n",
+    "animal = 'DK78'\n",
+    "channel  = 1\n",
+    "downsample = True\n",
+    "scaling_factor = 32\n",
+    "debug = True\n",
+    "task = 'extract'\n",
+    "#czi_file = 'DK78_slide059_2022_05_25_axion2.czi'\n",
+    "\n",
+    "czi_file = Path('/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/DK41a/czi/DK41_slide062_2020_09_26__9332.czi')\n",
+    "\n",
+    "czi = AICSImage(czi_file)\n",
+    "metadata_element = czi.metadata\n",
+    "metadata_str = ET.tostring(metadata_element, encoding='unicode')\n",
+    "\n",
+    "#print(metadata_str)\n",
+    "\n",
+    "# Save metadata_str to a file\n",
+    "metadata_file_path = 'metadata_output.txt'  # Define the file path where you want to save the metadata\n",
+    "\n",
+    "\n",
+    "with open(metadata_file_path, 'w', encoding='utf-8') as file:\n",
+    "    file.write(metadata_str)\n",
+    "\n",
+    "print(f\"Metadata saved to {metadata_file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C1 CFP \n",
+      "C2 AF568 \n",
+      "C3 TuYFP \n",
+      "[{'id': '1', 'mode': 'dye', 'description': '', 'channel_name': 'C1'}, {'id': '2', 'mode': 'dye', 'description': '', 'channel_name': 'C2'}, {'id': '3', 'mode': 'dye', 'description': '', 'channel_name': 'C3'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "json_meta = {}\n",
+    "tracing_data = []\n",
+    "metadata_str = ET.tostring(metadata_element, encoding='unicode')\n",
+    "parsed_metadata = ET.fromstring(metadata_str)\n",
+    "\n",
+    "channels_activated = parsed_metadata.findall(\".//Channel[@IsActivated='true']\")\n",
+    "\n",
+    "for channel_idx, channel in enumerate(channels_activated):\n",
+    "    channel_name = channel.get('Name')\n",
+    "    channel_description = channel.get('Description')\n",
+    "    print('C'+str(channel_idx+1), channel_name,channel_description)\n",
+    "    \n",
+    "    tracing_data.append({\"id\": str(channel_idx+1), \"mode\": \"dye\", \"description\": channel_description, \"channel_name\": \"C\"+str(channel_idx+1)})\n",
+    "    \n",
+    "    # channel_str = ET.tostring(channel, encoding='unicode')\n",
+    "    # print(channel_str)\n",
+    "\n",
+    "    #print(f'{\"id\": \"1\", \"mode\": \"dye\", \"description\": \"NeurotraceBlue\", \"channel_name\": \"C\"+str(channel_idx+1)}')\n",
+    "    #json_meta[\"Neuroanatomical_tracing\"] = {str(channel_idx)}\n",
+    "\n",
+    "print(tracing_data)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Define the base structure for the data\n",
+    "# data = {\n",
+    "#     \"Neuroanatomical_tracing\": {}\n",
+    "# }\n",
+    "\n",
+    "# # Define the tracing data to be added\n",
+    "# tracing_data = [\n",
+    "#     {\"id\": \"1\", \"mode\": \"dye\", \"description\": \"NeurotraceBlue\", \"channel_name\": \"C1\"},\n",
+    "#     {\"id\": \"3\", \"mode\": \"virus\", \"description\": \"GFP\", \"channel_name\": \"C3\"}\n",
+    "# ]\n",
+    "\n",
+    "# # Loop through each item in tracing_data and add it to the data dictionary\n",
+    "# for item in tracing_data:\n",
+    "#     data[\"Neuroanatomical_tracing\"][item[\"id\"]] = {\n",
+    "#         \"mode\": item[\"mode\"],\n",
+    "#         \"description\": item[\"description\"],\n",
+    "#         \"channel_name\": item[\"channel_name\"]\n",
+    "#     }\n",
+    "\n",
+    "# # Specify the file name\n",
+    "# file_name = 'meta-data.json'\n",
+    "\n",
+    "# # Writing the data to the file\n",
+    "# with open(file_name, 'w') as file:\n",
+    "#     json.dump(data, file, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': '1', 'mode': 'dye', 'description': '', 'channel_name': 'C1'},\n",
+       " {'id': '2', 'mode': 'dye', 'description': '', 'channel_name': 'C2'},\n",
+       " {'id': '3', 'mode': 'dye', 'description': '', 'channel_name': 'C3'}]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tracing_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_res: 3.25E-07 µm\n",
+      "y_res: 3.25E-07 µm\n"
+     ]
+    }
+   ],
+   "source": [
+    "metadata_str = ET.tostring(metadata_element, encoding='unicode')\n",
+    "parsed_metadata = ET.fromstring(metadata_str)\n",
+    "\n",
+    "xy_resolutions = parsed_metadata.findall(\".//Items\")\n",
+    "\n",
+    "for xml_element in xy_resolutions:\n",
+    "    \n",
+    "    # Find the Distance elements for X and Y\n",
+    "    x_distance_element = xml_element.find(\".//Distance[@Id='X']\")\n",
+    "    y_distance_element = xml_element.find(\".//Distance[@Id='Y']\")\n",
+    "    \n",
+    "    if x_distance_element is not None:\n",
+    "        x_value = x_distance_element.find('Value').text\n",
+    "        x_unit = x_distance_element.find('DefaultUnitFormat').text\n",
+    "        print(f\"x_res: {x_value} {x_unit}\")\n",
+    "    else:\n",
+    "        print(\"x_res: Not found\")\n",
+    "    \n",
+    "    if y_distance_element is not None:\n",
+    "        y_value = y_distance_element.find('Value').text\n",
+    "        y_unit = y_distance_element.find('DefaultUnitFormat').text\n",
+    "        print(f\"y_res: {y_value} {y_unit}\")\n",
+    "    else:\n",
+    "        print(\"x_res: Not found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<Items>\n",
+    "    <Distance Id=\"X\">\n",
+    "     <Value>3.25E-07</Value>\n",
+    "     <DefaultUnitFormat>µm</DefaultUnitFormat>\n",
+    "    </Distance>\n",
+    "    <Distance Id=\"Y\">\n",
+    "     <Value>3.25E-07</Value>\n",
+    "     <DefaultUnitFormat>µm</DefaultUnitFormat>\n",
+    "    </Distance>\n",
+    "   </Items>\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pipeline",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
