Updated the extraction process to show the preview images

--- a/src/atlas/notebooks/view_volumes.ipynb
+++ b/src/atlas/notebooks/view_volumes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bdf185d3",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,8 @@
     "from skimage import io\n",
     "from skimage.exposure import rescale_intensity\n",
     "import cv2\n",
-    "from skimage.filters import gaussian"
+    "from skimage.filters import gaussian\n",
+    "import ipywidgets"
    ]
   },
   {
@@ -258,23 +259,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f1b19834",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "volume dtype=uint8 shape=(157, 104, 182)\n"
+     ]
+    }
+   ],
    "source": [
     "# Full data structures look much better.\n",
-    "structure = 'IC'\n",
-    "structure_path = f'/net/birdstore/Active_Atlas_Data/data_root/atlas_data/Atlas.fulldata/structure'\n",
+    "structure = 'SC'\n",
+    "structure_path = f'/net/birdstore/Active_Atlas_Data/data_root/atlas_data/MD589/structure'\n",
     "volume_path = os.path.join(structure_path, f'{structure}.npy')\n",
     "volume = np.load(volume_path)\n",
-    "\n",
-    "plt_voxels = k3d.voxels(volume.astype(np.uint8),  color_map=(0xfdfe03), outlines=False)\n",
-    "plot = k3d.plot(grid_visible=True, camera_auto_fit=True)\n",
-    "plot += plt_voxels\n",
+    "print(f'volume dtype={volume.dtype} shape={volume.shape}')\n",
+    "#plt_voxels = k3d.voxels(volume.astype(np.uint8),  color_map=(0xfdfe03), outlines=False)\n",
+    "#plot = k3d.plot(grid_visible=True, camera_auto_fit=True)\n",
+    "#plot += plt_voxels\n",
+    "#plot.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "056281b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot = k3d.plot(background_color=255, grid_visible=True, lighting=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "51a05ed7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot += k3d.volume(\n",
+    "    volume=volume,\n",
+    "    alpha_coef=1.0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a4cbd952",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e24446ecfb24986ac16e2a34b4f4706",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "plot.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df1e441c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with out:\n",
+    "    display(plot)\n",
+    "display(out)\n",
+    "#plot.camera_reset(factor=0.5)"
    ]
   },
   {
@@ -368,7 +438,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
