--- a/in_development/Duane/czi_extract_img.ipynb
+++ b/in_development/Duane/czi_extract_img.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,44 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Pipeline' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m task \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mextract\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      7\u001b[0m czi_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDK78_slide059_2022_05_25_axion2.czi\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 9\u001b[0m pipeline \u001b[38;5;241m=\u001b[39m \u001b[43mPipeline\u001b[49m(\n\u001b[1;32m     10\u001b[0m         animal,\n\u001b[1;32m     11\u001b[0m         rescan_number\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m,\n\u001b[1;32m     12\u001b[0m         channel\u001b[38;5;241m=\u001b[39mchannel,\n\u001b[1;32m     13\u001b[0m         downsample\u001b[38;5;241m=\u001b[39mdownsample,\n\u001b[1;32m     14\u001b[0m         scaling_factor\u001b[38;5;241m=\u001b[39mscaling_factor,\n\u001b[1;32m     15\u001b[0m         task\u001b[38;5;241m=\u001b[39mtask,\n\u001b[1;32m     16\u001b[0m         debug\u001b[38;5;241m=\u001b[39mdebug,\n\u001b[1;32m     17\u001b[0m     )\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Pipeline' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "animal = 'DK78'\n",
-    "channel  = 1\n",
-    "downsample = True\n",
-    "scaling_factor = 32\n",
-    "debug = True\n",
-    "task = 'extract'\n",
-    "czi_file = 'DK78_slide059_2022_05_25_axion2.czi'\n",
-    "\n",
-    "pipeline = Pipeline(\n",
-    "        animal,\n",
-    "        rescan_number=0,\n",
-    "        channel=channel,\n",
-    "        downsample=downsample,\n",
-    "        scaling_factor=scaling_factor,\n",
-    "        task=task,\n",
-    "        debug=debug,\n",
-    "    )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,53 +179,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ANALYZING FILE: DK78_slide102_2022_05_26_axion2.czi\n",
-      "CZI file: DK78_slide102_2022_05_26_axion2.czi, scene: ScanRegion0, dimensions: (27740, 36905), channels: 2\n",
-      "CZI file: DK78_slide102_2022_05_26_axion2.czi, scene: ScanRegion1, dimensions: (27747, 40575), channels: 2\n",
-      "CZI file: DK78_slide102_2022_05_26_axion2.czi, scene: ScanRegion2, dimensions: (27786, 40578), channels: 2\n",
-      "CZI file: DK78_slide102_2022_05_26_axion2.czi, scene: ScanRegion3, dimensions: (27745, 40592), channels: 2\n"
+      "ANALYZING FILE: DKBC008_cord_slide004_loc1_2024_07_23_axion2.czi\n",
+      "CZI file: DKBC008_cord_slide004_loc1_2024_07_23_axion2.czi, scene: ScanRegion0, dimensions: (14917, 9377), channels: 2\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'DK78_slide102_2022_05_26_axion2.czi': {0: {'scene_name': 'ScanRegion0',\n",
+       "{'DKBC008_cord_slide004_loc1_2024_07_23_axion2.czi': {0: {'scene_name': 'ScanRegion0',\n",
        "   'channels': 2,\n",
-       "   'dimensions': (27740, 36905)},\n",
-       "  1: {'scene_name': 'ScanRegion1',\n",
-       "   'channels': 2,\n",
-       "   'dimensions': (27747, 40575)},\n",
-       "  2: {'scene_name': 'ScanRegion2',\n",
-       "   'channels': 2,\n",
-       "   'dimensions': (27786, 40578)},\n",
-       "  3: {'scene_name': 'ScanRegion3',\n",
-       "   'channels': 2,\n",
-       "   'dimensions': (27745, 40592)}}}"
+       "   'dimensions': (14917, 9377)}}}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "animal = 'DK78'\n",
+    "animal = 'DKBC008'\n",
     "channel  = 1\n",
     "downsample = True\n",
     "scaling_factor = 32\n",
     "debug = True\n",
     "task = 'extract'\n",
-    "#czi_file = 'DK78_slide059_2022_05_25_axion2.czi'\n",
-    "czi_file = 'DK78_slide102_2022_05_26_axion2.czi'\n",
+    "czi_file = 'DKBC008_cord_slide004_loc1_2024_07_23_axion2.czi'\n",
     "\n",
-    "DIR = '/home/drinehart'\n",
+    "DIR = '/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/DKBC008/czi_rescans'\n",
     "\n",
     "czi_file_path = Path(DIR, czi_file)\n",
     "print(f'ANALYZING FILE: {czi_file}')\n",
@@ -273,29 +223,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DATA WILL BE SAVED TO: /scratch/tiff_out/DK78_slide102_2022_05_26_axion2_scene0_channel1_scale1.tiff\n"
+      "DATA WILL BE SAVED TO: /scratch/tiff_out/DKBC008_cord_slide004_loc1_2024_07_23_axion2_scene0_channel1_scale1.tiff\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
     "output = '/scratch/tiff_out/'\n",
     "scenei = 0\n",
     "channel = 1\n",
     "scale = 1 #1 is full resolution, 16 is downsampled\n",
     "czi_file = Path(DIR, czi_file)\n",
     "\n",
-    "\n",
+    "os.makedirs(output, exist_ok=True)\n",
     "output_path = Path(output, f'{czi_file.stem}_scene{scenei}_channel{channel}_scale{scale}.tiff')\n",
     "print(f'DATA WILL BE SAVED TO: {output_path}')\n",
-    "file_key = (czi_file_path, output_path, scenei, channel, scale)\n",
     "\n",
+    "file_key = (czi_file_path, output_path, scenei, channel, scale)\n",
     "extract_tiff_from_czi(file_key)"
    ]
   },
@@ -512,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
