--- a/src/atlas/notebooks/view_volumes.ipynb
+++ b/src/atlas/notebooks/view_volumes.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bdf185d3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
     "import numpy as np\n",
     "import k3d\n",
     "import numpy as np\n",
@@ -259,78 +260,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f1b19834",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "volume dtype=uint8 shape=(157, 104, 182)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Full data structures look much better.\n",
-    "structure = 'SC'\n",
-    "structure_path = f'/net/birdstore/Active_Atlas_Data/data_root/atlas_data/MD589/structure'\n",
+    "structure = 'IC'\n",
+    "structure_path = f'/net/birdstore/Active_Atlas_Data/data_root/atlas_data/MD594/structure'\n",
     "volume_path = os.path.join(structure_path, f'{structure}.npy')\n",
     "volume = np.load(volume_path)\n",
-    "print(f'volume dtype={volume.dtype} shape={volume.shape}')\n",
-    "#plt_voxels = k3d.voxels(volume.astype(np.uint8),  color_map=(0xfdfe03), outlines=False)\n",
-    "#plot = k3d.plot(grid_visible=True, camera_auto_fit=True)\n",
-    "#plot += plt_voxels\n",
-    "#plot.display()"
+    "volume = gaussian(volume, 1)\n",
+    "print(f'volume dtype={volume.dtype} shape={volume.shape}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "056281b9",
+   "execution_count": null,
+   "id": "9b2c5cec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot = k3d.plot(background_color=255, grid_visible=True, lighting=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "51a05ed7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot += k3d.volume(\n",
-    "    volume=volume,\n",
-    "    alpha_coef=1.0\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "a4cbd952",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e24446ecfb24986ac16e2a34b4f4706",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "plt_volume = k3d.volume(volume.astype(np.float32))\n",
+    "plot = k3d.plot()\n",
+    "plot += plt_volume\n",
     "plot.display()"
    ]
   },
@@ -341,98 +296,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with out:\n",
-    "    display(plot)\n",
-    "display(out)\n",
-    "#plot.camera_reset(factor=0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b64b3d38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 3N_L is truncated\n",
-    "# DC is odd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b8851fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyvista as pv\n",
-    "from pyvista import examples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ce56b82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load dataset\n",
-    "data = examples.load_uniform()\n",
-    "# Extract a rugged volume\n",
-    "vol = data.threshold_percent(30, invert=1)\n",
-    "type(vol)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2014bc42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid = pv.UniformGrid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8debf728",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(grid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85c85cd2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid.dimensions = np.array(merged_volume.shape) + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44c215e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid.cell_data[\"values\"] = merged_volume.flatten(order=\"F\")  # Flatten the array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dcf37c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#p = pv.Plotter()\n",
-    "#p.add_volume(grid)\n",
-    "#p.show()"
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "x,y,z = volume.nonzero()\n",
+    "ax.scatter(x, y, z, zdir='y', c= 'red')\n",
+    "plt.show()"
    ]
   }
  ],
