Set crop size to be a multiple of 64 to better aid chunking

--- a/src/pipeline/notebooks/find_contours_grayscale.ipynb
+++ b/src/pipeline/notebooks/find_contours_grayscale.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "    ret,thresh = cv2.threshold(mask, 40, 255, 0)\n",
     "    contours, hierarchy = cv2.findContours(thresh, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_NONE)\n",
-    "    print(f'len contour={len(contours)})\n",
+    "    print(f'len contour={len(contours)}')\n",
     "    if len(contours) != 0:\n",
     "        \n",
     "        # draw in blue the contours that were founded\n",
@@ -84,7 +84,31 @@
     "        # draw the biggest contour (c) in green\n",
     "        cv2.rectangle(output,(x,y),(x+w,y+h),(0,255,0),2)\n",
     "        \n",
-    "    return output\n"
+    "    return output\n",
+    "\n",
+    "def get_image_box(mask):\n",
+    "    ROUNDTO = 64\n",
+    "    buffer = ((number - 1) // ROUNDTO + 1) * ROUNDTO\n",
+    "    mask = np.array(mask)\n",
+    "    mask[mask > 0] = 255\n",
+    "    _, thresh = cv2.threshold(mask, 200, 255, 0)\n",
+    "    contours, _ = cv2.findContours(thresh, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    boxes = []\n",
+    "    for contour in contours:\n",
+    "        x, y, w, h = cv2.boundingRect(contour)\n",
+    "        area = cv2.contourArea(contour)\n",
+    "        if area > 100:\n",
+    "            xmin = int(round(x))\n",
+    "            ymin = int(round(y))\n",
+    "            xmax = int(round(x + w))\n",
+    "            ymax = int(round(y + h))\n",
+    "            boxes.append([xmin, ymin, xmax, ymax])\n",
+    "    x1 = min(x[0] for x in boxes) - BUFFER\n",
+    "    y1 = min(x[1] for x in boxes) - BUFFER\n",
+    "    x2 = max(x[2] for x in boxes) + BUFFER\n",
+    "    y2 = max(x[3] for x in boxes) + BUFFER\n",
+    "    x1, y1, x2, y2 = [0 if i < 0 else i for i in [x1, y1, x2, y2]]\n",
+    "    return x1, y1, x2, y2\n"
    ]
   },
   {
@@ -119,8 +143,8 @@
    "source": [
     "animal = 'DK37'\n",
     "DIR = f'/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/{animal}/preps'\n",
-    "INPUT = os.path.join(DIR, 'C1', 'thumbnail')\n",
-    "file = '000.tif'\n",
+    "INPUT = os.path.join(DIR, 'masks/C1', 'thumbnail_masked')\n",
+    "file = '051.tif'\n",
     "infile = os.path.join(INPUT, file)"
    ]
   },
@@ -132,10 +156,25 @@
    "outputs": [],
    "source": [
     "img = io.imread(infile)\n",
-    "img = np.rot90(img, 3, axes=(1,0))\n",
-    "img = (img/256).astype(np.uint8)\n",
+    "#img = np.rot90(img, 3, axes=(1,0))\n",
+    "#img = (img/256).astype(np.uint8)\n",
     "print('img',img.dtype, img.shape)\n",
-    "plt.imshow(img)"
+    "plt.imshow(img, cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cd77fad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = img.copy()\n",
+    "x1, y1, x2, y2 = get_image_box(mask)\n",
+    "w = x2 - x1\n",
+    "h = y2 - y1\n",
+    "cv2.rectangle(mask,(x1,y1),(x1+w,y1+h),(255,255,255),1)\n",
+    "plt.imshow(mask, cmap=\"gray\")"
    ]
   },
   {
