Updated the calc mean filter

--- a/in_development/edward/cell_detector/Calc_mean_filter.ipynb
+++ b/in_development/edward/cell_detector/Calc_mean_filter.ipynb
@@ -28,71 +28,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animal = 'DK55'\n",
-    "section = 172\n",
-    "channel = 3\n",
-    "tif = str(section).zfill(3) + \".tif\"\n",
-    "prep_path = f'/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/{animal}/preps'\n",
-    "filepath = os.path.join(prep_path, f'C{channel}/full_aligned', tif)\n",
-    "full_img = read_image(filepath)\n",
-    "full_img.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# min\n",
-    "#x          34189.538462\n",
-    "#y          10960.000000\n",
-    "# max\n",
-    "#x          44627.384615\n",
-    "#y          23173.200000\n",
-    "# for using tile = 5, we push the origin down 2 tile_heights\n",
-    "\n",
-    "dfpath = os.path.join(prep_path, 'cell_labels', '057.csv')\n",
-    "df = pd.read_csv('172.csv')\n",
-    "#df = df.loc[df['section'] == section]\n",
-    "print(len(df.index))\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "startc = int(round(min(df['x']), -3))\n",
-    "startr = int(round(min(df['y']), -3))\n",
-    "endc = math.ceil(max(df['x']))\n",
-    "endr = math.ceil(max(df['y']))\n",
-    "print(startr, endr, startc, endc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tile_width = endc - startc\n",
-    "tile_height = endr - startr\n",
-    "img = full_img[startr:endr, startc:endc]\n",
-    "print(f'{startr}:{endr}, {startc}:{endc} height={tile_height} width={tile_width}')\n",
-    "print(img.shape)\n",
-    "#img.shape # (6800, 30000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vimg = img.copy()\n",
     "def show_image(img, increaser=1, _title=\"\", fsize=[15,15]):\n",
     "    plt.figure(figsize=[15,15])\n",
     "    plt.imshow(img * increaser, cmap=\"gray\")\n",
@@ -100,16 +35,7 @@
     "    plt.tick_params(axis='x', labelsize=20)\n",
     "    plt.tick_params(axis='y', labelsize=20)\n",
     "    plt.show()\n",
-    "increaser = 10\n",
-    "show_image(vimg, increaser=increaser,_title=f'{animal} C{channel}, section: {section}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "def collect_positives(uimg):\n",
     "    img=np.copy(uimg)\n",
     "    positives=[]\n",
@@ -136,7 +62,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotated_img,positives=collect_positives(img)"
+    "animal = 'DK62'\n",
+    "section = 175\n",
+    "channel = 1\n",
+    "prep_path = f'/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/{animal}/preps'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tif = str(section).zfill(3) + \".tif\"\n",
+    "filepath = os.path.join(prep_path, f'C{channel}/full_aligned', tif)\n",
+    "full_img = read_image(filepath)\n",
+    "full_img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfpath = os.path.join(prep_path, 'cell_labels', 'all_predictions.csv')\n",
+    "df = pd.read_csv(dfpath)\n",
+    "\n",
+    "print(len(df.index))\n",
+    "aggregated_data = df.groupby(['section']).agg(\n",
+    "    section_count=('section', 'count')\n",
+    ")\n",
+    "\n",
+    "print(aggregated_data.sort_values('section_count').tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.loc[df['section'] == 175]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = len(df.index)\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "startc = int(round(min(df['x']), -3))\n",
+    "startr = int(round(min(df['y']), -3))\n",
+    "endc = math.ceil(max(df['x']))\n",
+    "endr = math.ceil(max(df['y']))\n",
+    "# manually set to ROI\n",
+    "startr = 20000\n",
+    "endr = startr + 5000\n",
+    "startc = 30000\n",
+    "endc = startc + 10000\n",
+    "print(startr, endr, startc, endc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tile_width = endc - startc\n",
+    "tile_height = endr - startr\n",
+    "img = full_img[startr:endr, startc:endc]\n",
+    "print(f'{startr}:{endr}, {startc}:{endc}')\n",
+    "print(img.shape)\n",
+    "#img.shape # (6800, 30000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotated_img, positives = collect_positives(img)"
    ]
   },
   {
@@ -146,7 +165,8 @@
    "outputs": [],
    "source": [
     "#vimg=annotated_img[in_row_min:in_row_max, in_col_min: in_col_max]\n",
-    "show_image(annotated_img, increaser=increaser,_title=f' annotated {animal} C{channel}, section: {section}')"
+    "increaser = 1\n",
+    "show_image(annotated_img, increaser=increaser,_title=f'{animal} C{channel}, section: {section} predictions: {len(positives)}')"
    ]
   },
   {
@@ -158,7 +178,8 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=[15,15])\n",
-    "for i in range(len(positives[:100])):\n",
+    "end = min(100, len(positives))\n",
+    "for i in range(len(positives[0:end])):\n",
     "    plt.subplot(10,10,i+1)\n",
     "    plt.imshow(positives[i][2], cmap=\"gray\")\n",
     "plt.show()"
