--- a/in_development/Duane/cell_detector_errata/model_audit.ipynb
+++ b/in_development/Duane/cell_detector_errata/model_audit.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FOUND MODELS FILE @ f:\\models_example.pkl\n",
+      "FOUND MODELS FILE @ /data/pipeline/src/library/cell_labeling/models_example_json.pkl\n",
       "Model 1 BEST ITERATION: 675\n",
       "Model 2 BEST ITERATION: 675\n",
       "Model 3 BEST ITERATION: 675\n",
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "#12-FEB-2025\n",
+    "#20-FEB-2025\n",
     "\n",
     "#EVALUATE models_example (training rounds for ML)\n",
     "\n",
@@ -57,7 +57,11 @@
     "import xgboost as xgb\n",
     "from compress_pickle import dump, load\n",
     "\n",
-    "models_file = Path(os.getcwd(), 'models_example.pkl')\n",
+    "\n",
+    "base_path = Path.cwd().resolve().parent.parent.parent \n",
+    "models_filename = 'models_example_json.pkl'\n",
+    "\n",
+    "models_file = Path(base_path, 'src', 'library', 'cell_labeling', models_filename)\n",
     "\n",
     "if not models_file.is_file():\n",
     "    print(f'NO MODELS FILE FOUND')\n",
@@ -79,7 +83,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_imaging",
+   "display_name": "pipeline",
    "language": "python",
    "name": "python3"
   },
@@ -93,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
