--- a/in_development/Will/old/cell_extractor/retraining/retraining.ipynb
+++ b/in_development/Will/old/cell_extractor/retraining/retraining.ipynb
@@ -972,7 +972,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.9 ('pipeline')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -986,9 +986,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.10.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "9b29855540defb355a50951874e4b3a9a33e036ed29af88ad65ef37e45f70f6e"
