Added sort to calc mean notebook

--- a/in_development/edward/cell_detector/Calc_mean_filter.ipynb
+++ b/in_development/edward/cell_detector/Calc_mean_filter.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -14,8 +22,6 @@
     "import cv2\n",
     "import sys\n",
     "import math\n",
-    "import pickle as pk\n",
-    "import random\n",
     "from pathlib import Path\n",
     "PIPELINE_ROOT = Path('./').resolve().parent.parent.parent\n",
     "sys.path.append(PIPELINE_ROOT.as_posix())\n",
@@ -26,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,13 +44,13 @@
     "    plt.tick_params(axis='y', labelsize=20)\n",
     "    plt.show()\n",
     "\n",
-    "def collect_positives(uimg, startr, startc, tile_width, tile_height):\n",
+    "def collect_positives(uimg):\n",
     "    img=np.copy(uimg)\n",
     "    positives=[]\n",
     "    radius = 80\n",
     "    a=int(radius/2)\n",
     "    color = (65000)\n",
-    "    min_row, min_col = startr, startc\n",
+    "    min_row,min_col = startr, startc\n",
     "    for index,r in df.iterrows():\n",
     "        col = int(round(r['x'])-min_col)\n",
     "        row = int(round(r['y'])-min_row)\n",
@@ -65,8 +71,8 @@
    "outputs": [],
    "source": [
     "animal = 'DK184'\n",
-    "section = 204\n",
-    "channel = 3\n",
+    "section = 57\n",
+    "channel = 1\n",
     "prep_path = f'/net/birdstore/Active_Atlas_Data/data_root/pipeline_data/{animal}/preps'"
    ]
   },
@@ -97,7 +103,7 @@
     "    endc = 65000\n",
     "    img = full_img[startr:endr, startc:endc]\n",
     "    print(img.shape)\n",
-    "    write_image(filepath, img)\n"
+    "    write_image(filepath, img)"
    ]
   },
   {
@@ -108,6 +114,7 @@
    "source": [
     "dfpath = os.path.join(prep_path, 'cell_labels', 'all_predictions.csv')\n",
     "df = pd.read_csv(dfpath)\n",
+    "df = df.loc[df['section'] == section]\n",
     "df = df.sort_values(['section', 'x', 'y'])"
    ]
   },
@@ -117,7 +124,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.loc[df['section'] == section]\n",
     "print(df.head(3))\n",
     "print(df.tail(3))"
    ]
@@ -129,7 +135,12 @@
    "outputs": [],
    "source": [
     "count = len(df.index)\n",
-    "print(count)"
+    "if count > 100:\n",
+    "    lower = count // 4\n",
+    "    upper = lower + 100\n",
+    "    print(lower, upper)\n",
+    "    df = df[lower:upper]\n",
+    "print(len(df.index))"
    ]
   },
   {
@@ -143,16 +154,10 @@
     "endc = math.ceil(max(df['x']))\n",
     "endr = math.ceil(max(df['y']))\n",
     "# manually set to ROI\n",
-    "startr = 0\n",
-    "endr = full_img.shape[0]\n",
-    "startc = 0\n",
-    "endc = full_img.shape[1]\n",
-    "\n",
     "#startr = 0\n",
-    "#endr = 20000\n",
-    "#startc = 35000\n",
-    "#endc = full_img.shape[1]\n",
-    "\n",
+    "#endr = startr + 15000\n",
+    "#startc = 0\n",
+    "#endc = startc + 15000\n",
     "print(startr, endr, startc, endc)"
    ]
   },
@@ -176,21 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotated_img, positives = collect_positives(img, startr, startc, tile_width, tile_height)\n",
+    "annotated_img, positives = collect_positives(img)\n",
     "print(len(positives))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#vimg=annotated_img[in_row_min:in_row_max, in_col_min: in_col_max]\n",
-    "increaser = 5\n",
-    "show_image(annotated_img, increaser=increaser,_title=f'{animal} C{channel}, section: {section} predictions: {len(positives)}')"
    ]
   },
   {
@@ -199,9 +191,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if len(positives) > 100:\n",
-    "    positives = b = random.sample(positives, 100)\n",
-    "print(len(positives))"
+    "#vimg=annotated_img[in_row_min:in_row_max, in_col_min: in_col_max]\n",
+    "increaser = 1\n",
+    "show_image(annotated_img, increaser=increaser,_title=f'{animal} C{channel}, section: {section} predictions: {len(positives)}')"
    ]
   },
   {
@@ -226,11 +218,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def plot_dist(uimg):\n",
+    "    H=uimg.flatten()\n",
+    "    H=np.sort(H)\n",
+    "\n",
+    "    H=H[0:-1:1000]\n",
+    "    print(H.shape)\n",
+    "    H1 = np.arange(0,1,1./H.shape[0])\n",
+    "    H1 = H1[:H.shape[0]]\n",
+    "    print(H1.shape)\n",
+    "\n",
+    "    plt.plot(H, H1)\n",
+    "    plt.grid()\n",
+    "    plt.figure()\n",
+    "    plt.hist(H,bins=100);\n",
+    "plot_dist(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "end = min(100, len(positives))\n",
+    "for i in range(len(positives[0:end])):\n",
+    "    plt.hist(positives[i][2].flatten(),bins=100);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "S=np.stack([I for (x,y,I)in positives])\n",
-    "print('S.shape', S.shape)\n",
+    "S.shape\n",
     "\n",
     "Mean=np.mean(S,axis=0)\n",
-    "print('Mean.shape', Mean.shape)\n",
+    "Mean.shape\n",
     "\n",
     "plt.imshow(Mean, cmap=\"gray\")\n",
     "plt.show()\n",
@@ -245,6 +271,7 @@
     "_std=np.std(Mean.flatten())\n",
     "print('after: mean=%5.2f std=%5.2f'%(_mean,_std))\n",
     "\n",
+    "import pickle as pk\n",
     "with open('mean.pkl','wb') as pkl_file:\n",
     "    pk.dump({'Mean':Mean},pkl_file)\n",
     "\n",
